--- a/app/src/main/res/layout/activity_login_start.xml
+++ b/app/src/main/res/layout/activity_login_start.xml
@@ -30,27 +30,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_act_login_start_logo">
 
-        <ImageView
-            android:id="@+id/img_ic_mail"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="17dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_mail" />
+            android:layout_centerInParent="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="26dp"
-            android:layout_toRightOf="@id/img_ic_mail"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:text="이메일로 로그인"
-            android:textColor="#242424"
-            android:textSize="14sp" />
+            <ImageView
+                android:id="@+id/img_ic_mail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_mail" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="26dp"
+                android:fontFamily="@font/nanum_barungothic_light"
+                android:includeFontPadding="false"
+                android:text="이메일로 로그인"
+                android:textColor="#242424"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+
 
     </RelativeLayout>
 
@@ -67,28 +74,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relative_act_login_start_email_login">
 
-        <ImageView
-            android:id="@+id/img_ic_facebook"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
             android:layout_marginStart="23dp"
             android:layout_marginTop="3dp"
             android:layout_marginBottom="4dp"
-            android:src="@drawable/ic_facebook" />
+            android:gravity="center_vertical"
+            android:layout_centerInParent="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="26dp"
-            android:layout_toRightOf="@id/img_ic_facebook"
-            android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"
-            android:text="페북으로 로그인"
-            android:textColor="#ffffff"
-            android:textSize="14sp" />
+            <ImageView
+                android:id="@+id/img_ic_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_facebook" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="26dp"
+                android:fontFamily="@font/nanum_barungothic_light"
+                android:includeFontPadding="false"
+                android:text="페북으로 로그인"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
