--- a/app/src/main/res/layout/dialog_put_archive.xml
+++ b/app/src/main/res/layout/dialog_put_archive.xml
@@ -33,14 +33,60 @@
         android:layout_height="0.5dp"
         android:background="#cdcdcd"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_dialog_put_archive_my_archive_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="13dp">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_dialog_put_archive_my_archive_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="13dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <LinearLayout
+            android:id="@+id/linear_dialog_put_archive_make_new_archive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="27dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <View
+                    android:layout_width="78dp"
+                    android:layout_height="78dp"
+                    android:background="@drawable/archive_make_card"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/btn_archiveselect_plus"
+                    android:layout_centerInParent="true"/>
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아카이브 만들기"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                android:fontFamily="@font/nanum_barungothic_regular"
+                android:includeFontPadding="false"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="10dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
 
     <View
         android:layout_width="match_parent"
