--- a/app/src/main/res/layout/fragment_my_page_scrap.xml
+++ b/app/src/main/res/layout/fragment_my_page_scrap.xml
@@ -7,11 +7,12 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="13dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="8dp"
         android:id="@+id/rv_mypage_scrap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
 
 
     </androidx.recyclerview.widget.RecyclerView>
