--- a/app/src/main/res/layout/fragment_my_page_me.xml
+++ b/app/src/main/res/layout/fragment_my_page_me.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.mypage.mypage.MyPageMeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_margin="10dp"
         android:id="@+id/rv_mypage_me"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
