--- a/app/src/main/res/layout/rv_item_mypage_me.xml
+++ b/app/src/main/res/layout/rv_item_mypage_me.xml
@@ -1,43 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:orientation="vertical"
-    android:layout_width="wrap_content" 
-    android:layout_height="wrap_content"
-    >
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_margin="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rv_item_mypage_me_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-        
-        <RelativeLayout
-            android:id="@+id/rv_item_mypage_me_container"
-            android:layout_width="149dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10.5dp"
-
-            >
         <ImageView
             android:id="@+id/rv_item_mypage_me_img"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="148.8dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="9.5dp"
-            android:src="@drawable/mydirectory"
+            android:background="@drawable/archive_card_round"
             android:scaleType="centerCrop"
-            />
+            android:src="@drawable/mydirectory"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/rv_item_mypage_me_directory_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="모든 스크랩"
-            android:layout_marginTop="12.2dp"
-            android:layout_marginLeft="16.5dp"
             android:layout_below="@id/rv_item_mypage_me_img"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/nanum_barungothic_regular"
-            android:textSize="14sp"
+            android:text="모든 스크랩"
             android:textColor="@color/black"
-            />
-        </RelativeLayout>
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/rv_item_mypage_me_img"
+            app:layout_constraintTop_toBottomOf="@+id/rv_item_mypage_me_img" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    
 
-</RelativeLayout>
+
