apply home - new_archive multi category text

--- a/app/src/main/res/layout/rv_item_archive_card.xml
+++ b/app/src/main/res/layout/rv_item_archive_card.xml
@@ -33,6 +33,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="13dp"
                 android:fontFamily="@font/avenir_next_bold"
+                android:lineSpacingExtra="7sp"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
