--- a/app/src/main/res/layout/activity_setting_edit_profile.xml
+++ b/app/src/main/res/layout/activity_setting_edit_profile.xml
@@ -40,6 +40,14 @@
             />
 
         <View
+            android:id="@+id/view6"
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp"
+            android:background="#d1d1d1" />
+
+        <View
             android:layout_width="match_parent"
             android:layout_height="0.6dp"
             android:layout_alignParentBottom="true"
@@ -125,30 +133,32 @@
 
     <EditText
         android:id="@+id/edit_profile_name_et"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
         android:ems="10"
         android:hint="이름"
         android:inputType="text"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edit_profile_name_txt"
         app:layout_constraintTop_toTopOf="@+id/view5" />
 
 
     <EditText
         android:id="@+id/edit_profile_myinfo_et"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
         android:background="@null"
         android:ems="10"
         android:gravity="start|top"
         android:hint="소개를 입력해주세요."
         android:inputType="textMultiLine"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/edit_profile_myinfo_txt"
+        app:layout_constraintEnd_toEndOf="@+id/edit_profile_name_et"
+        app:layout_constraintStart_toStartOf="@+id/edit_profile_name_et"
         app:layout_constraintTop_toTopOf="@+id/edit_profile_myinfo_txt" />
 
 
