--- a/app/src/main/res/layout/fragment_link_result.xml
+++ b/app/src/main/res/layout/fragment_link_result.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.search_result.LinkResultFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search_result_link"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:visibility="visible"/>
+
+    <include
+        android:visibility="gone"
+        android:id="@+id/link_result_empty"
+        layout="@layout/search_result_empty"/>
+</LinearLayout>
