--- a/app/src/main/res/layout/dialog_put_archive.xml
+++ b/app/src/main/res/layout/dialog_put_archive.xml
@@ -10,7 +10,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="저장 위치"
+            android:text="내 아카이브"
             android:textColor="#000000"
             android:textSize="14sp"
             android:fontFamily="@font/nanum_barungothic_regular"
