--- a/app/src/main/res/layout/activity_setting_edit_profile.xml
+++ b/app/src/main/res/layout/activity_setting_edit_profile.xml
@@ -136,8 +136,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@null"
         android:ems="10"
         android:hint="이름"
         android:inputType="text"
@@ -146,6 +147,16 @@
         app:layout_constraintStart_toEndOf="@+id/edit_profile_name_txt"
         app:layout_constraintTop_toTopOf="@+id/view5" />
 
+
+    <View
+        android:id="@+id/view7"
+        android:layout_width="284dp"
+        android:layout_height="0.6dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="15dp"
+        android:background="#d1d1d1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_et" />
 
     <EditText
         android:id="@+id/edit_profile_myinfo_et"
