mypage empty view modify

--- a/app/src/main/res/layout/fragment_link_result.xml
+++ b/app/src/main/res/layout/fragment_link_result.xml
@@ -16,5 +16,5 @@
     <include
         android:visibility="gone"
         android:id="@+id/link_result_empty"
-        layout="@layout/search_result_empty"/>
+        layout="@layout/mypage_my_empty"/>
 </LinearLayout>
