--- a/app/src/main/res/layout/my_page_tablayout.xml
+++ b/app/src/main/res/layout/my_page_tablayout.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/nanum_barungothic_regular"
-            android:text="나"
+            android:text="내 아카이브"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
