--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -29,25 +29,21 @@
         <com.google.android.material.tabs.TabItem
             android:id="@+id/ti_navigation_home"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_tab_home" />
+            android:layout_height="wrap_content"/>
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/ti_navigation_category"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_tab_category" />
+            android:layout_height="wrap_content" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/ti_navigation_notice"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_tab_notice" />
+            android:layout_height="wrap_content"/>
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/ti_navigation_profile"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_tab_profile" />
+            android:layout_height="wrap_content"/>
     </com.google.android.material.tabs.TabLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
