--- a/app/src/main/res/layout/activity_make_new_archive.xml
+++ b/app/src/main/res/layout/activity_make_new_archive.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="36dp"
         android:textStyle="bold"/>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/et_act_make_new_archive_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
