modify SignupPrivateActivity birth inputType

--- a/app/src/main/res/layout/activity_signup_private.xml
+++ b/app/src/main/res/layout/activity_signup_private.xml
@@ -178,7 +178,7 @@
         android:textSize="14sp"
         android:fontFamily="@font/nanum_barungothic_light"
         android:includeFontPadding="false"
-        android:inputType="date"
+        android:inputType="phone"
         android:singleLine ="true"/>
 
     <RelativeLayout
