--- a/app/src/main/res/layout/activity_my_page_scrap.xml
+++ b/app/src/main/res/layout/activity_my_page_scrap.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="스크랩"
+            android:text="나의 아카이브"
             android:textSize="17sp"
             android:textColor="#000000"
             android:fontFamily="@font/nanum_barungothic_regular"
@@ -85,11 +85,22 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#9d9d9d"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_mypage_scrap_link"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <include
+        android:id="@+id/my_page_scrap_link_result_empty"
+        layout="@layout/search_result_empty"
+        android:visibility="visible" />
 
 </LinearLayout>
