--- a/app/src/main/res/layout/fragment_home_new_article.xml
+++ b/app/src/main/res/layout/fragment_home_new_article.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container_frg_home_new_article"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/linear_fragment_home_new_article"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp">
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="새로운 아티클"
+            android:layout_gravity="center_vertical"
             android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
-            android:textStyle="bold"
-            android:textSize="18sp"
+            android:text="새로운 아티클"
             android:textColor="#191919"
-            android:layout_gravity="center_vertical"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/btn_rightarrow"/>
+            android:src="@drawable/btn_rightarrow" />
 
     </LinearLayout>
 
