--- a/app/src/main/res/drawable/very_light_pink_round.xml
+++ b/app/src/main/res/drawable/very_light_pink_round.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:topLeftRadius="6dp" android:topRightRadius="6dp"/>
-
+    <corners android:radius="6dp"/>
+    <stroke android:color="@color/very_light_pink_two" android:width="0.5dp"/>
 </shape>
