--- a/app/src/main/res/layout/rv_item_mypage_scrap.xml
+++ b/app/src/main/res/layout/rv_item_mypage_scrap.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/avenir_next_bold"
             android:includeFontPadding="false"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="13sp"
             app:layout_constraintStart_toStartOf="@+id/rv_item_mypage_scrap_img"
             app:layout_constraintTop_toTopOf="@+id/rv_item_mypage_scrap_img"
@@ -45,7 +45,7 @@
         android:includeFontPadding="false"
         android:lineSpacingExtra="6sp"
         android:text="팀을 훌륭하게 이끄는 멋진 리더가 되려면 어떻게 해야할까요?"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/rv_item_mypage_scrap_img"
         app:layout_constraintHorizontal_bias="0.0"
