--- a/app/src/main/res/layout/activity_setting_version.xml
+++ b/app/src/main/res/layout/activity_setting_version.xml
@@ -50,11 +50,10 @@
             android:layout_marginStart="132dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="132dp"
-            android:background="@drawable/archive_card_round"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/artic_logo"  />
+            android:src="@drawable/appicon"  />
 
         <TextView
             android:id="@+id/version_info_txt"
