--- a/app/src/main/res/layout/rv_item_link_list.xml
+++ b/app/src/main/res/layout/rv_item_link_list.xml
@@ -92,6 +92,7 @@
                 android:textSize="13sp"
                 android:background="@drawable/archive_card_round"/>
 
+
             <ImageButton
                 android:id="@+id/rv_link_list_storage"
                 android:layout_width="20dp"
@@ -99,18 +100,22 @@
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/btn_folder"/>
 
-            <TextView
+            <RelativeLayout
                 android:id="@+id/rv_link_list_storage_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/rv_link_list_storage">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/rv_link_list_storage"
                 android:fontFamily="@font/nanum_barungothic_light"
                 android:includeFontPadding="false"
                 android:text="담기"
                 android:textColor="@color/brownish_grey"
                 android:textSize="13sp"/>
-
+            </RelativeLayout>
 
 
         </LinearLayout>
