--- a/app/src/main/res/layout/rv_item_reading_history.xml
+++ b/app/src/main/res/layout/rv_item_reading_history.xml
@@ -45,7 +45,9 @@
             android:lineSpacingExtra="6sp"
             android:includeFontPadding="false"
             android:textSize="14sp"
-            android:text="제품 디자이너는 코딩에 대해 잊어야 합니다."/>
+            android:text="제품 디자이너는 코딩에 대해 잊어야 합니다."
+            android:ellipsize="end"
+            android:maxLines="2"/>
 
 
 
