--- a/app/src/main/res/layout/activity_login_start.xml
+++ b/app/src/main/res/layout/activity_login_start.xml
@@ -9,24 +9,25 @@
 
     <ImageView
         android:id="@+id/img_act_login_start_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="143dp"
+        android:layout_height="50dp"
         android:layout_marginTop="205dp"
         android:src="@drawable/artic_logo"
+        android:layout_marginStart="108dp"
+        android:layout_marginEnd="108dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:id="@+id/relative_act_login_start_email_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
+        android:layout_width="205dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="78dp"
         android:layout_marginTop="148dp"
-        android:layout_marginEnd="85dp"
+        android:layout_marginEnd="77dp"
         android:background="@drawable/round_email_login_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_act_login_start_logo">
 
@@ -35,14 +36,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="11dp"
             android:layout_marginBottom="10dp"
-            android:layout_centerInParent="true">
+            android:layout_marginRight="50dp"
+            >
 
             <ImageView
                 android:id="@+id/img_ic_mail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_mail" />
 
             <TextView
@@ -62,15 +65,14 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relative_act_login_start_facebook_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
+        android:id="@+id/relative_act_login_start_kakao_login"
+        android:layout_width="205dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="78dp"
         android:layout_marginTop="14dp"
-        android:layout_marginEnd="85dp"
-        android:background="@drawable/round_facebook_login_background"
+        android:layout_marginEnd="77dp"
+        android:background="@drawable/round_kakao_login_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relative_act_login_start_email_login">
 
@@ -78,26 +80,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginStart="23dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="4dp"
             android:gravity="center_vertical"
-            android:layout_centerInParent="true">
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="50dp">
 
             <ImageView
-                android:id="@+id/img_ic_facebook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_facebook" />
+                android:id="@+id/img_ic_kakao"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/kakao" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="26dp"
+                android:layout_marginLeft="22dp"
                 android:fontFamily="@font/nanum_barungothic_light"
                 android:includeFontPadding="false"
-                android:text="페북으로 로그인"
-                android:textColor="#ffffff"
+                android:text="카카오로 로그인"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -112,7 +114,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/relative_act_login_start_facebook_login">
+        app:layout_constraintTop_toBottomOf="@id/relative_act_login_start_kakao_login">
 
         <TextView
             android:layout_width="wrap_content"
