--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="brownish_grey">#707070</color>
     <color name="white_two">#f9f9f9</color>
     <color name="artic_transparent">#00000000</color>
+    <color name="kakao_yellow">#fddc3f</color>
 
 </resources>
