--- a/app/src/main/res/layout/activity_login_start.xml
+++ b/app/src/main/res/layout/activity_login_start.xml
@@ -150,26 +150,15 @@
 
     </LinearLayout>
 
-    <com.kakao.usermgmt.LoginButton
-        android:id="@+id/btn_kakao_login"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="36dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <!--<com.kakao.usermgmt.LoginButton-->
+        <!--android:id="@+id/btn_kakao_login"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_marginStart="120dp"-->
+        <!--android:layout_marginTop="36dp"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent">-->
 
-    </com.kakao.usermgmt.LoginButton>
-    
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/btn_fb_login"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <!--</com.kakao.usermgmt.LoginButton>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
