--- a/app/src/main/res/drawable/round_kakao_login_background.xml
+++ b/app/src/main/res/drawable/round_kakao_login_background.xml
@@ -4,6 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="21dp"/>
 
-    <solid android:color="@color/kakao_yellow" />
+    <solid android:color="#39589a" />
 
 </shape>
