--- a/app/src/main/res/layout/activity_login_start.xml
+++ b/app/src/main/res/layout/activity_login_start.xml
@@ -96,7 +96,7 @@
                 android:layout_marginLeft="26dp"
                 android:fontFamily="@font/nanum_barungothic_light"
                 android:includeFontPadding="false"
-                android:text="카카오로 로그인"
+                android:text="페이스북 로그인"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
