remove default facebook login progress bar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,15 @@
         <item name="colorControlNormal">@color/very_light_pink_two</item>
     </style>
 
+    <!-- to remove default facebook login progress bar -->
+    <style name="Translucent" parent="Translucent.Base"/>
+
+    <style name="InvisibleProgress">
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="Translucent.Base" parent="android:Theme.Translucent.NoTitleBar">
+        <item name="android:progressBarStyle">@style/InvisibleProgress</item>
+    </style>
 
 </resources>
