--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -113,7 +113,8 @@
         android:paddingBottom="10dp"
         android:layout_marginTop="17dp"
         android:layout_marginLeft="22dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:background="#000000">
 
     </androidx.recyclerview.widget.RecyclerView>
 
