--- a/app/src/main/res/layout/rv_item_archive_list.xml
+++ b/app/src/main/res/layout/rv_item_archive_list.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/ibtn_rv_item_archive_list_scrap"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="21dp"
             android:layout_marginEnd="55dp"
             android:layout_marginTop="30dp"
             android:text="린 브랜딩을 어떻게 시작해야 할까?"
@@ -49,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="3dp">
+                android:layout_marginBottom="3dp"
+                android:layout_margin="21dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
