category spacing modify and mypage tablayout spacing modify

--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -156,7 +156,7 @@
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tl_my_page"
-                    android:layout_width="200dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
