--- a/app/src/main/res/layout/rv_item_article_about_article.xml
+++ b/app/src/main/res/layout/rv_item_article_about_article.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="159dp"
+    android:layout_height="158dp"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,8 +14,8 @@
         <ImageView
             android:scaleType="centerCrop"
             android:id="@+id/img_rv_item_article_about_article"
-            android:layout_width="wrap_content"
-            android:layout_height="82dp"
+            android:layout_width="154dp"
+            android:layout_height="81dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +25,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:background="@drawable/back_transparent_round_card_grey"
-            android:layout_width="match_parent"
-            android:layout_height="76dp"
+            android:layout_width="154dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_height="77dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
