--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="스플래시 이미지이이이이 주세요오오오"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:scaleType="centerCrop"
+        android:id="@+id/lottie_splash"
+        app:lottie_rawRes="@raw/splash"
+        app:lottie_loop="false"
+        app:lottie_autoPlay="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
